--- a/package.json
+++ b/package.json
@@ -9,15 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.14",
+    "@expo-google-fonts/jost": "^0.2.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "expo": "~51.0.17",
+    "expo-image-manipulator": "^12.0.5",
+    "expo-image-picker": "~15.0.6",
+    "expo-location": "^17.0.1",
+    "expo-mail-composer": "^13.0.1",
+    "expo-notifications": "~0.28.9",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "i": "^0.3.7",
+    "lottie-react-native": "6.7.0",
+   
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-maps": "1.14.0",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
