--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "expo-status-bar": "~1.12.1",
     "i": "^0.3.7",
     "lottie-react-native": "6.7.0",
-   
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-maps": "1.14.0",
-    "react-native-svg": "15.2.0"
+    "react-native-reanimated": "^3.12.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
