--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-maps": "1.14.0",
-    "react-native-reanimated": "^3.12.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "expo-dev-client": "~4.0.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
