--- a/package.json
+++ b/package.json
@@ -19,31 +19,37 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.17",
+    "expo": "~51.0.38",
+    "expo-dev-client": "~4.0.28",
     "expo-image-manipulator": "^12.0.5",
-    "expo-image-picker": "~15.0.6",
+    "expo-image-picker": "~15.0.7",
     "expo-location": "^17.0.1",
     "expo-mail-composer": "^13.0.1",
-    "expo-notifications": "~0.28.9",
-    "expo-splash-screen": "~0.27.5",
+    "expo-notifications": "~0.28.19",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "i": "^0.3.7",
     "lottie-react-native": "6.7.0",
+    "meappalzheimerbussiness": "file:",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-charts": "^1.4.47",
+    "react-native-gifted-chat": "^2.6.4",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
-    "expo-dev-client": "~4.0.19"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/styled-components": "^5.1.34",
+    "@types/styled-components-react-native": "^5.2.5",
     "typescript": "~5.3.3"
   },
   "private": true
