--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ EXPO_PUBLIC_API_MODEL_VERSION_ID=aa7f35c01e0642fda5cf400f543e7c40
 EXPO_PUBLIC_API_APP_ID=goodplate
 EXPO_PUBLIC_API_USER_ID=weslesonsouza
 EXPO_PUBLIC_API_GEMMIN=AIzaSyB5EjihPaGpNtZx1xFrpNnf8-PL8ZlzWHc
+
+
+ANDROID_CLIENT_ID=teste
+IOS_CLIENT_ID= string
+WEB_CLIENT_ID= stri
+REALM_APP_ID=string
