--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "i": "^0.3.7",
     "lottie-react-native": "6.7.0",
     "meappalzheimerbussiness": "file:",
+    "phosphor-react-native": "^2.2.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
